Add company information page
運営会社ページを新規作成し、株式会社CHHERsの会社情報を掲載。
index.htmlのフッターに運営会社へのリンクを追加。

--- a/index.html
+++ b/index.html
@@ -435,8 +435,11 @@
     <div class="max-w-6xl mx-auto px-4 text-center">
       <div class="font-bold text-xl mb-2">Love Trinita</div>
       <p class="text-blue-200 text-sm mb-4">大分トリニータ応援アプリ</p>
+      <div class="text-sm text-blue-300 mb-4">
+        <a href="/company.html" class="hover:text-white hover:underline">運営会社</a>
+      </div>
       <div class="text-sm text-blue-300">
-        <p class="mb-1">CHEERs.inc</p>
+        <p class="mb-1">株式会社CHHERs</p>
         <p>&copy; 2025 Love Trinita</p>
       </div>
     </div>
