Fix company name typo and add contact email
- Fix CHHERs → CHEERs typo in footer and company page
- Remove company name from footer, keep link to company page
- Add contact email to company information

--- a/company.html
+++ b/company.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>運営会社 | Love Trinita</title>
-  <meta name="description" content="Love Trinitaの運営会社情報。株式会社CHHERsが運営する大分トリニータ応援アプリです。">
+  <meta name="description" content="Love Trinitaの運営会社情報。株式会社CHEERsが運営する大分トリニータ応援アプリです。">
 
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://love-trinita.com/company.html">
@@ -76,7 +76,7 @@
           <tbody class="divide-y divide-gray-200">
             <tr>
               <th class="py-4 pr-4 text-left text-gray-600 font-medium align-top w-28 md:w-36">会社名</th>
-              <td class="py-4 text-gray-900">株式会社CHHERs</td>
+              <td class="py-4 text-gray-900">株式会社CHEERs</td>
             </tr>
             <tr>
               <th class="py-4 pr-4 text-left text-gray-600 font-medium align-top">所在地</th>
@@ -100,6 +100,12 @@
                 </ul>
               </td>
             </tr>
+            <tr>
+              <th class="py-4 pr-4 text-left text-gray-600 font-medium align-top">お問い合わせ</th>
+              <td class="py-4 text-gray-900">
+                <a href="mailto:info.lovetrinita@gmail.com" class="text-trinita-blue hover:underline">info.lovetrinita@gmail.com</a>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
@@ -120,10 +126,10 @@
     <div class="max-w-6xl mx-auto px-4 text-center">
       <div class="font-bold text-xl mb-2">Love Trinita</div>
       <p class="text-blue-200 text-sm mb-4">大分トリニータ応援アプリ</p>
-      <div class="text-sm text-blue-300">
-        <p class="mb-1">株式会社CHHERs</p>
-        <p>&copy; 2025 Love Trinita</p>
+      <div class="text-sm text-blue-300 mb-4">
+        <a href="/company.html" class="hover:text-white hover:underline">運営会社</a>
       </div>
+      <p class="text-sm text-blue-300">&copy; 2025 Love Trinita</p>
     </div>
   </footer>
 
