--- a/index.html
+++ b/index.html
@@ -438,10 +438,7 @@
       <div class="text-sm text-blue-300 mb-4">
         <a href="/company.html" class="hover:text-white hover:underline">運営会社</a>
       </div>
-      <div class="text-sm text-blue-300">
-        <p class="mb-1">株式会社CHHERs</p>
-        <p>&copy; 2025 Love Trinita</p>
-      </div>
+      <p class="text-sm text-blue-300">&copy; 2025 Love Trinita</p>
     </div>
   </footer>
 
